src/Antlr4Exemplo/Grammar/ExemploParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Exemplo.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System;
using System.IO;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
public partial class ExemploParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		ASSIGNMENT=1, PLUS_ASSIGNMENT=2, MINUS_ASSIGNMENT=3, DIV_ASSIGNMENT=4, 
		TIMES_ASSIGNMENT=5, GT=6, GE=7, LT=8, LE=9, EQ=10, NEQ=11, PLUS=12, MINUS=13, 
		DIV=14, TIMES=15, POW=16, LBRACE=17, RBRACE=18, LPAREN=19, RPAREN=20, 
		SEMI=21, COMMA=22, WHITESPACE=23, SINGLE_LINE_COMMENT=24, DELIMITED_COMMENT=25, 
		AND=26, OR=27, IF=28, ELSE=29, WHILE=30, EXTERNAL=31, COALESCE_OPERATOR=32, 
		NULL=33, VAR=34, NUMBER=35, VARIABLE=36, TEXT=37;
	public const int
		RULE_rule_set = 0, RULE_rule_block = 1, RULE_expression = 2, RULE_high_precedence_operator = 3, 
		RULE_low_precedence_operator = 4, RULE_arithmetic_expression = 5, RULE_comparison_expression = 6, 
		RULE_loop_expression = 7, RULE_null_coalescing_expression = 8, RULE_variable_declaration = 9, 
		RULE_assignment = 10, RULE_statement = 11, RULE_statement_block = 12, 
		RULE_atom = 13, RULE_variable = 14, RULE_external = 15, RULE_comparison_operator = 16, 
		RULE_assignment_operator = 17;
	public static readonly string[] ruleNames = {
		"rule_set", "rule_block", "expression", "high_precedence_operator", "low_precedence_operator", 
		"arithmetic_expression", "comparison_expression", "loop_expression", "null_coalescing_expression", 
		"variable_declaration", "assignment", "statement", "statement_block", 
		"atom", "variable", "external", "comparison_operator", "assignment_operator"
	};

	private static readonly string[] _LiteralNames = {
		null, "'='", "'+='", "'-='", "'/='", "'*='", "'>'", "'>='", "'<'", "'<='", 
		"'=='", "'!='", "'+'", "'-'", "'/'", "'*'", "'^'", "'{'", "'}'", "'('", 
		"')'", "';'", "','", null, null, null, "'&&'", "'||'", "'if'", "'else'", 
		"'while'", "'@'", "'??'", "'null'", "'var'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "ASSIGNMENT", "PLUS_ASSIGNMENT", "MINUS_ASSIGNMENT", "DIV_ASSIGNMENT", 
		"TIMES_ASSIGNMENT", "GT", "GE", "LT", "LE", "EQ", "NEQ", "PLUS", "MINUS", 
		"DIV", "TIMES", "POW", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "SEMI", 
		"COMMA", "WHITESPACE", "SINGLE_LINE_COMMENT", "DELIMITED_COMMENT", "AND", 
		"OR", "IF", "ELSE", "WHILE", "EXTERNAL", "COALESCE_OPERATOR", "NULL", 
		"VAR", "NUMBER", "VARIABLE", "TEXT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Exemplo.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ExemploParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ExemploParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ExemploParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Rule_setContext : ParserRuleContext {
		public Rule_blockContext[] rule_block() {
			return GetRuleContexts<Rule_blockContext>();
		}
		public Rule_blockContext rule_block(int i) {
			return GetRuleContext<Rule_blockContext>(i);
		}
		public Rule_setContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule_set; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRule_set(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Rule_setContext rule_set() {
		Rule_setContext _localctx = new Rule_setContext(Context, State);
		EnterRule(_localctx, 0, RULE_rule_set);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << IF) | (1L << WHILE) | (1L << EXTERNAL) | (1L << NULL) | (1L << VAR) | (1L << NUMBER) | (1L << VARIABLE) | (1L << TEXT))) != 0)) {
				{
				{
				State = 36; rule_block();
				}
				}
				State = 41;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule_blockContext : ParserRuleContext {
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public Variable_declarationContext variable_declaration() {
			return GetRuleContext<Variable_declarationContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public Rule_blockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule_block; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRule_block(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Rule_blockContext rule_block() {
		Rule_blockContext _localctx = new Rule_blockContext(Context, State);
		EnterRule(_localctx, 2, RULE_rule_block);
		try {
			State = 46;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 42; assignment();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 43; variable_declaration();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 44; expression();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 45; statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public Arithmetic_expressionContext arithmetic_expression() {
			return GetRuleContext<Arithmetic_expressionContext>(0);
		}
		public Comparison_expressionContext comparison_expression() {
			return GetRuleContext<Comparison_expressionContext>(0);
		}
		public Loop_expressionContext loop_expression() {
			return GetRuleContext<Loop_expressionContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 4, RULE_expression);
		try {
			State = 51;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 48; arithmetic_expression(0);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 49; comparison_expression(0);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 50; loop_expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class High_precedence_operatorContext : ParserRuleContext {
		public ITerminalNode TIMES() { return GetToken(ExemploParser.TIMES, 0); }
		public ITerminalNode DIV() { return GetToken(ExemploParser.DIV, 0); }
		public High_precedence_operatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_high_precedence_operator; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHigh_precedence_operator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public High_precedence_operatorContext high_precedence_operator() {
		High_precedence_operatorContext _localctx = new High_precedence_operatorContext(Context, State);
		EnterRule(_localctx, 6, RULE_high_precedence_operator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			_la = TokenStream.LA(1);
			if ( !(_la==DIV || _la==TIMES) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Low_precedence_operatorContext : ParserRuleContext {
		public ITerminalNode PLUS() { return GetToken(ExemploParser.PLUS, 0); }
		public ITerminalNode MINUS() { return GetToken(ExemploParser.MINUS, 0); }
		public Low_precedence_operatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_low_precedence_operator; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLow_precedence_operator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Low_precedence_operatorContext low_precedence_operator() {
		Low_precedence_operatorContext _localctx = new Low_precedence_operatorContext(Context, State);
		EnterRule(_localctx, 8, RULE_low_precedence_operator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			_la = TokenStream.LA(1);
			if ( !(_la==PLUS || _la==MINUS) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Arithmetic_expressionContext : ParserRuleContext {
		public Arithmetic_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arithmetic_expression; } }
	 
		public Arithmetic_expressionContext() { }
		public virtual void CopyFrom(Arithmetic_expressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class CoalesceArithmeticExpressionContext : Arithmetic_expressionContext {
		public Null_coalescing_expressionContext null_coalescing_expression() {
			return GetRuleContext<Null_coalescing_expressionContext>(0);
		}
		public CoalesceArithmeticExpressionContext(Arithmetic_expressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCoalesceArithmeticExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class HighPrecedenceExpressionContext : Arithmetic_expressionContext {
		public Arithmetic_expressionContext[] arithmetic_expression() {
			return GetRuleContexts<Arithmetic_expressionContext>();
		}
		public Arithmetic_expressionContext arithmetic_expression(int i) {
			return GetRuleContext<Arithmetic_expressionContext>(i);
		}
		public High_precedence_operatorContext high_precedence_operator() {
			return GetRuleContext<High_precedence_operatorContext>(0);
		}
		public HighPrecedenceExpressionContext(Arithmetic_expressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHighPrecedenceExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AtomExpressionContext : Arithmetic_expressionContext {
		public AtomContext atom() {
			return GetRuleContext<AtomContext>(0);
		}
		public AtomExpressionContext(Arithmetic_expressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAtomExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PowExpressionContext : Arithmetic_expressionContext {
		public Arithmetic_expressionContext[] arithmetic_expression() {
			return GetRuleContexts<Arithmetic_expressionContext>();
		}
		public Arithmetic_expressionContext arithmetic_expression(int i) {
			return GetRuleContext<Arithmetic_expressionContext>(i);
		}
		public ITerminalNode POW() { return GetToken(ExemploParser.POW, 0); }
		public PowExpressionContext(Arithmetic_expressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPowExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LowPrecedenceExpressionContext : Arithmetic_expressionContext {
		public Arithmetic_expressionContext[] arithmetic_expression() {
			return GetRuleContexts<Arithmetic_expressionContext>();
		}
		public Arithmetic_expressionContext arithmetic_expression(int i) {
			return GetRuleContext<Arithmetic_expressionContext>(i);
		}
		public Low_precedence_operatorContext low_precedence_operator() {
			return GetRuleContext<Low_precedence_operatorContext>(0);
		}
		public LowPrecedenceExpressionContext(Arithmetic_expressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLowPrecedenceExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ParenthesisExpressionContext : Arithmetic_expressionContext {
		public ITerminalNode LPAREN() { return GetToken(ExemploParser.LPAREN, 0); }
		public Arithmetic_expressionContext arithmetic_expression() {
			return GetRuleContext<Arithmetic_expressionContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(ExemploParser.RPAREN, 0); }
		public ParenthesisExpressionContext(Arithmetic_expressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParenthesisExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Arithmetic_expressionContext arithmetic_expression() {
		return arithmetic_expression(0);
	}

	private Arithmetic_expressionContext arithmetic_expression(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Arithmetic_expressionContext _localctx = new Arithmetic_expressionContext(Context, _parentState);
		Arithmetic_expressionContext _prevctx = _localctx;
		int _startState = 10;
		EnterRecursionRule(_localctx, 10, RULE_arithmetic_expression, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				_localctx = new ParenthesisExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 58; Match(LPAREN);
				State = 59; arithmetic_expression(0);
				State = 60; Match(RPAREN);
				}
				break;
			case 2:
				{
				_localctx = new CoalesceArithmeticExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 62; null_coalescing_expression();
				}
				break;
			case 3:
				{
				_localctx = new AtomExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 63; atom();
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 79;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 77;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
					case 1:
						{
						_localctx = new PowExpressionContext(new Arithmetic_expressionContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_arithmetic_expression);
						State = 66;
						if (!(Precpred(Context, 6))) throw new FailedPredicateException(this, "Precpred(Context, 6)");
						State = 67; Match(POW);
						State = 68; arithmetic_expression(7);
						}
						break;
					case 2:
						{
						_localctx = new HighPrecedenceExpressionContext(new Arithmetic_expressionContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_arithmetic_expression);
						State = 69;
						if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
						State = 70; high_precedence_operator();
						State = 71; arithmetic_expression(6);
						}
						break;
					case 3:
						{
						_localctx = new LowPrecedenceExpressionContext(new Arithmetic_expressionContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_arithmetic_expression);
						State = 73;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 74; low_precedence_operator();
						State = 75; arithmetic_expression(5);
						}
						break;
					}
					} 
				}
				State = 81;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Comparison_expressionContext : ParserRuleContext {
		public Comparison_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comparison_expression; } }
	 
		public Comparison_expressionContext() { }
		public virtual void CopyFrom(Comparison_expressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ParenthesisComparisonExpressionContext : Comparison_expressionContext {
		public ITerminalNode LPAREN() { return GetToken(ExemploParser.LPAREN, 0); }
		public Comparison_expressionContext comparison_expression() {
			return GetRuleContext<Comparison_expressionContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(ExemploParser.RPAREN, 0); }
		public ParenthesisComparisonExpressionContext(Comparison_expressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParenthesisComparisonExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AndComparisonExpressionContext : Comparison_expressionContext {
		public Comparison_expressionContext[] comparison_expression() {
			return GetRuleContexts<Comparison_expressionContext>();
		}
		public Comparison_expressionContext comparison_expression(int i) {
			return GetRuleContext<Comparison_expressionContext>(i);
		}
		public ITerminalNode AND() { return GetToken(ExemploParser.AND, 0); }
		public AndComparisonExpressionContext(Comparison_expressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAndComparisonExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ComparisonExpressionContext : Comparison_expressionContext {
		public Arithmetic_expressionContext[] arithmetic_expression() {
			return GetRuleContexts<Arithmetic_expressionContext>();
		}
		public Arithmetic_expressionContext arithmetic_expression(int i) {
			return GetRuleContext<Arithmetic_expressionContext>(i);
		}
		public Comparison_operatorContext comparison_operator() {
			return GetRuleContext<Comparison_operatorContext>(0);
		}
		public ComparisonExpressionContext(Comparison_expressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComparisonExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OrComparisonExpressionContext : Comparison_expressionContext {
		public Comparison_expressionContext[] comparison_expression() {
			return GetRuleContexts<Comparison_expressionContext>();
		}
		public Comparison_expressionContext comparison_expression(int i) {
			return GetRuleContext<Comparison_expressionContext>(i);
		}
		public ITerminalNode OR() { return GetToken(ExemploParser.OR, 0); }
		public OrComparisonExpressionContext(Comparison_expressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrComparisonExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Comparison_expressionContext comparison_expression() {
		return comparison_expression(0);
	}

	private Comparison_expressionContext comparison_expression(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Comparison_expressionContext _localctx = new Comparison_expressionContext(Context, _parentState);
		Comparison_expressionContext _prevctx = _localctx;
		int _startState = 12;
		EnterRecursionRule(_localctx, 12, RULE_comparison_expression, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				_localctx = new ComparisonExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 83; arithmetic_expression(0);
				State = 84; comparison_operator();
				State = 85; arithmetic_expression(0);
				}
				break;
			case 2:
				{
				_localctx = new ParenthesisComparisonExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 87; Match(LPAREN);
				State = 88; comparison_expression(0);
				State = 89; Match(RPAREN);
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 101;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 99;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
					case 1:
						{
						_localctx = new AndComparisonExpressionContext(new Comparison_expressionContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_comparison_expression);
						State = 93;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 94; Match(AND);
						State = 95; comparison_expression(4);
						}
						break;
					case 2:
						{
						_localctx = new OrComparisonExpressionContext(new Comparison_expressionContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_comparison_expression);
						State = 96;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 97; Match(OR);
						State = 98; comparison_expression(3);
						}
						break;
					}
					} 
				}
				State = 103;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Loop_expressionContext : ParserRuleContext {
		public Loop_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_loop_expression; } }
	 
		public Loop_expressionContext() { }
		public virtual void CopyFrom(Loop_expressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class WhileExpressionContext : Loop_expressionContext {
		public ITerminalNode WHILE() { return GetToken(ExemploParser.WHILE, 0); }
		public ITerminalNode LPAREN() { return GetToken(ExemploParser.LPAREN, 0); }
		public Comparison_expressionContext comparison_expression() {
			return GetRuleContext<Comparison_expressionContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(ExemploParser.RPAREN, 0); }
		public ITerminalNode LBRACE() { return GetToken(ExemploParser.LBRACE, 0); }
		public Statement_blockContext statement_block() {
			return GetRuleContext<Statement_blockContext>(0);
		}
		public ITerminalNode RBRACE() { return GetToken(ExemploParser.RBRACE, 0); }
		public WhileExpressionContext(Loop_expressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExemploVisitor<TResult> typedVisitor = visitor as IExemploVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
